--- a/predator/predator.vcxproj.filters
+++ b/predator/predator.vcxproj.filters
@@ -1,33 +1,32 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    <Filter Include="predator">
+      <UniqueIdentifier>{4641D112-320E-2C1E-5B27-1AC6475361AC}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\predator.h" />
+    <ClInclude Include="src\predator\Application.h">
+      <Filter>predator</Filter>
+    </ClInclude>
+    <ClInclude Include="src\predator\Core.h">
+      <Filter>predator</Filter>
+    </ClInclude>
+    <ClInclude Include="src\predator\Log.h">
+      <Filter>predator</Filter>
+    </ClInclude>
+    <ClInclude Include="src\predator\events\Event.h" />
+    <ClInclude Include="src\predator\events\KeyEvent.h" />
+    <ClInclude Include="src\predator\events\ApplicationEvent.h" />
+    <ClInclude Include="src\predator\events\MouseEvent.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\predator\Application.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>predator</Filter>
     </ClCompile>
-    <ClCompile Include="src\predator\Core.h">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="src\predator\Log.cpp">
+      <Filter>predator</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="src\predator\Application.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\predator.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
 </Project>
